# Triton-XDNA

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/actions/test/: action.yaml
.github/workflows/: build.yml  nightly-wheels.yml  small.yml
amd_triton_npu/: CMakeLists.txt  amd_triton_npu.cc
amd_triton_npu/backend/: compiler.py  driver.py  name.conf
ci/docker-based/: Dockerfile  build_docker.sh  loop_docker_ci.sh  test_docker_ci.sh  triton-xdna-public-docker-ci-loop.service
ci/docker-based/inside_docker/: actions_runner.sh  entrypoint.sh
scripts/: apply_patches.py  run_tests.py
utils/: env_setup.sh  llvm-aie-hash.txt  mlir-aie-hash.txt  mlir-air-hash.txt  requirements_wheel.txt
